Fixed modal auto alignment.

--- a/jquery.kyco.popup.css
+++ b/jquery.kyco.popup.css
@@ -1,7 +1,7 @@
 /*********************************************\
 
 	jquery.kyco.popup
-	v1.1.0
+	v1.1.1
 
 	Brought to you by http://www.kyco.co.za
 	Copyright 2013 Cornelius Weidmann
@@ -21,6 +21,7 @@
 	display: none; /* You'll want this in case the page takes long to load before the script executes */
 	padding: 10px;
 	background: #fff;
+	border: 10px solid rgba(0, 0, 0, 0.5);
 	box-shadow: 0 0 0 1px #000;
 }
 
